--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "express": "^4.17.1",
         "mongoose": "^5.11.8",
         "morgan": "^1.10.0",
-        "nodemon": "^2.0.6"
+        "nodemon": "^2.0.6",
+        "validator": "^13.5.2"
     },
     "devDependencies": {
         "eslint": "^7.15.0",
