--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "morgan": "^1.10.0",
         "nodemailer": "^6.4.17",
         "nodemon": "^2.0.6",
+        "pug": "^3.0.0",
         "validator": "^13.5.2",
         "xss-clean": "^0.1.1"
     },
